# lunaris_core

./: Cargo.toml  PLUGINS.md  README.md  build.rs  rust-toolchain.toml
src/: app.rs  bridge.rs  consts.rs  lib.rs  linked_plugins.rs  logging.rs  main.rs  oops.rs  prelude.rs  registry.rs  signals.rs
src/dispatcher/: mod.rs
src/mailbox/: mod.rs
src/orchestrator/: mod.rs  worker.rs
src/plugin/: host_api.rs  mod.rs
src/protocol/: message.rs  mod.rs  opcode.rs
src/utils/: errors.rs  mod.rs  tracing.rs  uuid.rs  version.rs
