[package]
name = "lunaris_core"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[[bin]]
name = "lunaris_core"
path = "src/main.rs"
required-features = []

[dependencies]
bevy_ecs.workspace = true
eframe = "0.32.0"
egui_tiles = "0.13.0"
futures = "0.3.31"
lunaris_api.workspace = true
rayon = "1.11.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
slab.workspace = true
tokio = { workspace = true, features = ["full", "tracing"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true

[build-dependencies]
cargo_toml = "0.22.3"
prettyplease = "0.2.36"
serde = { version = "1.0.219", features = ["derive"] }
syn = "2.0.105"
toml = "0.9.5"

