[package]
name = "lunaris_core"
version = "0.1.0"
edition = "2024"
readme = "README.md"

[[bin]]
name = "lunaris_core"
path = "src/main.rs"
required-features = []

[dependencies]
lunaris_ecs = { workspace = true }
bevy_utils = "0.17.3"
colored = "3.0.0"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
eframe = { version = "0.33.2", features = ["persistence"], optional = true }
egui_tiles = { version = "0.14.0", optional = true }
futures.workspace = true
inventory.workspace = true
linker.workspace = true
lunaris_api.workspace = true
mimalloc = { version = "0.1.48", features = ["v3"] }
native-dialog = { version = "0.9.3", optional = true }
notify-rust = { version = "4.11.7", features = ["images"] }
num_cpus = "1.17.0"
signal-hook = "0.3.18"
slab.workspace = true
tokio = { workspace = true, features = ["full", "tracing"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "time", "env-filter"] }
wgpu.workspace = true
parking_lot = "0.12"
smallvec = "1.15.1"
crossbeam = "0.8.4"

[build-dependencies]
cargo_toml = "0.22.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[features]
default = ["dep:eframe", "dep:egui_tiles", "dep:native-dialog"]
headless = []
